added changes to html

--- a/readme.html
+++ b/readme.html
@@ -1,14 +1,26 @@
-This is a readme file.
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Testing Repos</title>
+  <style>
+    div {
+      background: lightblue;
+      margin: 0 auto;
+      width: 80%;
+      text-align: center;
+      color: white;
+    }
+  </style>
+</head>
 
-============
+<body>
+  <div>
+    <h1>This is a test repo</h1>
+  </div>
+</body>
 
-This is a new commit
-=========
-
-This is a new change
-
-
-+++++++++++++=
-This is a new change
-+++++++++
+</html>
